; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_queue.c_strdupWtoA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_queue.c_strdupWtoA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @strdupWtoA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @strdupWtoA(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i8* null, i8** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load i32, i32* @CP_ACP, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @WideCharToMultiByte(i32 %8, i32 0, i32* %9, i32 -1, i8* null, i32 0, i32* null, i32* null)
  store i32 %10, i32* %4, align 4
  %11 = call i32 (...) @GetProcessHeap()
  %12 = load i32, i32* %4, align 4
  %13 = call i8* @HeapAlloc(i32 %11, i32 0, i32 %12)
  store i8* %13, i8** %3, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %7
  %16 = load i32, i32* @CP_ACP, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @WideCharToMultiByte(i32 %16, i32 0, i32* %17, i32 -1, i8* %18, i32 %19, i32* null, i32* null)
  br label %21

21:                                               ; preds = %15, %7
  br label %22

22:                                               ; preds = %21, %1
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i8*, i32, i32*, i32*) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
